src/test/deca/context/invalid/wrong_type_init.deca
{
int x = "a";
}
// @expected_output deca:2:8: Rvalue is of type String and leftOperand is of type int
